conseguindo pegar dados

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".CadastroActivity"
             android:exported="false">
         </activity>
+        <activity
+            android:name=".DetalhesActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
